# micro_blog

./: .gitignore  pyproject.toml
blog/: settings.py  urls.py
microblog/: admin.py  forms.py  models.py  urls.py  views.py
microblog/migrations/: 0001_initial.py  0002_like_comment.py  0003_alter_comment_post_alter_like_post.py  0004_alter_comment_date_alter_post_date.py
old-git/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
old-git/logs/: HEAD
old-git/logs/refs/: stash
old-git/logs/refs/heads/: master
old-git/logs/refs/remotes/origin/: HEAD  master
old-git/objects/pack/: pack-6b5df13fa04f81b15c518289fc7e06057dc69cb9.idx  pack-6b5df13fa04f81b15c518289fc7e06057dc69cb9.pack
old-git/refs/: stash
old-git/refs/remotes/origin/: master
templates/: base.html  home.html  login.html  post_detail.html  post_form.html  registration.html
