[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Микро-блог на Django"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-bootstrap-v5 = "^1.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
